# EasyJobs

./: .env.example  .gitignore  LICENSE  README.english.md  README.md  docker-compose.yml  init_multiple_dbs.sh
services/candidate/: Dockerfile  pyproject.toml
services/candidate/app/: main.py
services/candidate/app/api/: deps.py
services/candidate/app/api/v1/: router.py
services/candidate/app/api/v1/endpoints/: candidate.py
services/candidate/app/core/: config.py
services/candidate/app/db/: database.py
services/candidate/app/db/models/: candidate.py
services/candidate/app/schemas/: candidate.py
services/candidate/migrations/: env.py
services/candidate/migrations/versions/: cd8e8b3e836c_migration_add_recruter_id.py  eb0cc51e14ad_create_candidates_table.py
services/candidate/tests/: candidates.py  conftest.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: main.py
services/gateway/app/api/: proxy_routes.py
services/gateway/app/core/: auth_middleware.py  config.py  correlation_middleware.py  proxy.py  security.py
services/identity/: Dockerfile  alembic.ini  pyproject.toml
services/identity/app/: main.py
services/identity/app/api/: deps.py
services/identity/app/api/v1/: router.py
services/identity/app/api/v1/endpoints/: auth.py
services/identity/app/core/: config.py  jwt.py  security.py
services/identity/app/db/: database.py
services/identity/app/db/models/: user.py
services/identity/app/schemas/: user.py
services/identity/migrations/: env.py
services/identity/migrations/versions/: 89c799fdff9c_create_users_table.py
services/intelligence/: Dockerfile  pyproject.toml
services/intelligence/app/: main.py
services/intelligence/app/api/v1/: router.py
services/intelligence/app/core/: config.py
services/intelligence/app/etl/: parser.py  pipeline.py
services/intelligence/app/llm/: agent.py  compression.py  context.py  prompt_loader.py  tools.py  utils.py
services/intelligence/app/schemas/: extracted_candidate.py
services/intelligence/app/vector_db/: client.py  indexer.py
(+48 files in other folders)
