[project]
name = "candidate-service"
version = "0.1.0"
description = "Servicio empresarial principal responsable de la gestión de candidatos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "pydantic-settings",
    "pyjwt",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]