[project]
name = "gateway-service"
version = "0.1.0"
description = "Puerta de enlace API, punto de entrada único para todas las solicitudes de los clientes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "httpx",
    "pydantic-settings",
    "pyjwt",
]

[tool.setuptools.packages.find]
include = ["app*"]